--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>br.org.asipeca</groupId>
 	<artifactId>asipeca</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	<name>asipeca</name>
 	<description>Asipeca web site</description>
